--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #dd1667; }
+  background: #130f59; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #5825f9; }
+  background: #b9f119; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #3e3242; }
+  background: #6cd9a1; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #c38d3e; }
+  background: #e08995; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #1c4fbe; }
+  background: #fdea3d; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #189f85; }
+  background: #7466e4; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #631b5f; }
+  background: #bed005; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #6cadcd; }
+  background: #9afce6; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b71c45; }
+  background: #a7b4f0; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #602d21; }
+  background: #0175ea; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #5eaa58; }
+  background: #455650; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #ac65fe; }
+  background: #e98b95; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #49fe4d; }
+  background: #ff2f75; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #67f075; }
+  background: #bc8381; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #e8dff1; }
+  background: #757a8c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #457733; }
+  background: #95f147; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #f2047e; }
+  background: #6244e3; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #e7e709; }
+  background: #249357; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #d91458; }
+  background: #e09348; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #c8281d; }
+  background: #d1d808; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #b3c2bf; }
+  background: #670bfd; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #28ed39; }
+  background: #50fa92; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #9142da; }
+  background: #d908fc; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #816f47; }
+  background: #ee2bdb; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #8c1b36; }
+  background: #ecd0de; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #3ff8b7; }
+  background: #3bed53; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #158583; }
+  background: #c828eb; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #8f9ada; }
+  background: #a636f5; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #232720; }
+  background: #8a7d86; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #46da76; }
+  background: #f1cdbe; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #5a069b; }
+  background: #c89a0f; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #61b4c7; }
+  background: #4a34b4; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #b4f120; }
+  background: #5ad159; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #6996ba; }
+  background: #d19e32; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #c96c7c; }
+  background: #b4b055; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #0697fe; }
+  background: #7a2cce; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #f659f9; }
+  background: #19fa2d; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #2140f3; }
+  background: #ab8e7a; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #318d2c; }
+  background: #d3719f; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #83d5e8; }
+  background: #e4a28d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #9057fb; }
+  background: #837999; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #4dec52; }
+  background: #0f2dcd; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #bea503; }
+  background: #251cc9; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #2c4971; }
+  background: #f461be; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #65a140; }
+  background: #cb4ddf; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #6bcfa7; }
+  background: #443f95; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #99937c; }
+  background: #1e7112; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #2ef27f; }
+  background: #01efce; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #8689df; }
+  background: #528031; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #bd618b; }
+  background: #1529c9; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #102337; }
+  background: #06a003; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #bead41; }
+  background: #06ae03; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #a8306c; }
+  background: #229846; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #f9dcb8; }
+  background: #3d996b; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #59be04; }
+  background: #0b647b; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e69a1a; }
+  background: #93541c; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #ccede2; }
+  background: #efdec5; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #f707fe; }
+  background: #c7e252; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #bc5deb; }
+  background: #a1b493; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #07c93b; }
+  background: #fa6d2f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #14d62c; }
+  background: #4419fe; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d57983; }
+  background: #1f31fd; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #371343; }
+  background: #28cf18; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f0cb51; }
+  background: #537487; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #f91909; }
+  background: #7f8266; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #dacb04; }
+  background: #fd5674; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #fe2fb1; }
+  background: #b34726; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #39b163; }
+  background: #4468bd; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #ebc54b; }
+  background: #40d8b3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #97bc72; }
+  background: #3c7477; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #434577; }
+  background: #168cef; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #b2aca6; }
+  background: #b0a0c1; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #cb6573; }
+  background: #1bc8fe; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #d38f85; }
+  background: #649ac3; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #242bf4; }
+  background: #0bf3e9; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #70dabf; }
+  background: #096eea; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #d47c6b; }
+  background: #0d6697; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #2ac80c; }
+  background: #1edea6; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #59beae; }
+  background: #1ddc5b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #5eb666; }
+  background: #1b275d; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #d59726; }
+  background: #6bca8e; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #c30d99; }
+  background: #bc0682; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #841136; }
+  background: #bc9480; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #1ccf32; }
+  background: #2b5791; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #a66743; }
+  background: #867a83; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #cde3cd; }
+  background: #2effc2; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a35f93; }
+  background: #03dbe7; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #9beb1c; }
+  background: #6c5a59; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #cd46e8; }
+  background: #ca0224; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #d5d79e; }
+  background: #f6f1d8; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #57215b; }
+  background: #c50835; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #f13474; }
+  background: #61c42e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #d223c4; }
+  background: #b04b11; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #c6ce24; }
+  background: #a485b6; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #617bd1; }
+  background: #16fb76; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #8f2ff6; }
+  background: #3bf40d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #d72b83; }
+  background: #bec1f2; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #78a613; }
+  background: #8168b0; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #0f8bdb; }
+  background: #c2ac7b; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #15ccf3; }
+  background: #2ecce7; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16838,6 +16838,14 @@ input:not(:checked) + .slider-switch > .switch-non {
 
 .result-title {
   font-size: 36px !important; }
+
+.btn-links-wrapper .cancel-btn {
+  color: #4C4C4C;
+  text-decoration: none; }
+  .btn-links-wrapper .cancel-btn span {
+    color: #4c4c4c;
+    font-size: 20px;
+    padding: 18px 0px 14px; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
