--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #130f59; }
+  background: #740eb4; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #b9f119; }
+  background: #496bdf; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #6cd9a1; }
+  background: #65b93c; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #e08995; }
+  background: #7095a5; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #fdea3d; }
+  background: #7e6673; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #7466e4; }
+  background: #c117b3; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #bed005; }
+  background: #1c4ff0; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #9afce6; }
+  background: #1e4370; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #a7b4f0; }
+  background: #6e6201; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #0175ea; }
+  background: #9c694c; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #455650; }
+  background: #ad5de9; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #e98b95; }
+  background: #996c66; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #ff2f75; }
+  background: #de3690; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #bc8381; }
+  background: #67c98a; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #757a8c; }
+  background: #940d6a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #95f147; }
+  background: #0735c5; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #6244e3; }
+  background: #28e40b; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #249357; }
+  background: #df3f65; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #e09348; }
+  background: #6d15a2; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d1d808; }
+  background: #2f78f5; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #670bfd; }
+  background: #0c8cec; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #50fa92; }
+  background: #1a20ea; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #d908fc; }
+  background: #a5dfc1; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #ee2bdb; }
+  background: #6d17ec; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #ecd0de; }
+  background: #45543e; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #3bed53; }
+  background: #aece0c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #c828eb; }
+  background: #4c767f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #a636f5; }
+  background: #a0afc3; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #8a7d86; }
+  background: #13699a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f1cdbe; }
+  background: #51c216; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #c89a0f; }
+  background: #772622; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #4a34b4; }
+  background: #1303c3; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #5ad159; }
+  background: #96b8af; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d19e32; }
+  background: #c85a25; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #b4b055; }
+  background: #c32f17; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #7a2cce; }
+  background: #844984; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #19fa2d; }
+  background: #9e0964; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ab8e7a; }
+  background: #95694b; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #d3719f; }
+  background: #52eb45; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e4a28d; }
+  background: #81f6c6; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #837999; }
+  background: #61de73; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #0f2dcd; }
+  background: #9c8fe8; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #251cc9; }
+  background: #6472b9; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #f461be; }
+  background: #08a381; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #cb4ddf; }
+  background: #bdb8b6; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #443f95; }
+  background: #b0b29f; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #1e7112; }
+  background: #9b3eb7; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #01efce; }
+  background: #c2c7c3; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #528031; }
+  background: #e18cd3; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #1529c9; }
+  background: #0e25d6; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #06a003; }
+  background: #4ba87b; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #06ae03; }
+  background: #58f02d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #229846; }
+  background: #12a4fd; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3d996b; }
+  background: #31ca06; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #0b647b; }
+  background: #8e9035; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #93541c; }
+  background: #82d6e8; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #efdec5; }
+  background: #946341; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #c7e252; }
+  background: #c68d23; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a1b493; }
+  background: #dd0f57; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #fa6d2f; }
+  background: #b339f3; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #4419fe; }
+  background: #614a2f; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #1f31fd; }
+  background: #c7f460; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #28cf18; }
+  background: #899577; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #537487; }
+  background: #c67b4b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #7f8266; }
+  background: #898928; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #fd5674; }
+  background: #c2dae1; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b34726; }
+  background: #92d51a; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #4468bd; }
+  background: #f3b924; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #40d8b3; }
+  background: #0ce04c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #3c7477; }
+  background: #07b9d2; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #168cef; }
+  background: #081e9f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #b0a0c1; }
+  background: #417cd1; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #1bc8fe; }
+  background: #41124d; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #649ac3; }
+  background: #b01e09; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #0bf3e9; }
+  background: #89908a; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #096eea; }
+  background: #fa0564; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #0d6697; }
+  background: #a33837; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #1edea6; }
+  background: #552629; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #1ddc5b; }
+  background: #f433b3; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #1b275d; }
+  background: #b7ba52; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #6bca8e; }
+  background: #57f02e; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #bc0682; }
+  background: #863613; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #bc9480; }
+  background: #bf7789; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2b5791; }
+  background: #916c26; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #867a83; }
+  background: #169ca7; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #2effc2; }
+  background: #ba99b8; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #03dbe7; }
+  background: #0f93e2; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #6c5a59; }
+  background: #c10bb9; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #ca0224; }
+  background: #be349d; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #f6f1d8; }
+  background: #e64ec2; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #c50835; }
+  background: #79a873; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #61c42e; }
+  background: #29c325; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #b04b11; }
+  background: #c19ff8; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #a485b6; }
+  background: #24d323; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #16fb76; }
+  background: #f3d1b2; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #3bf40d; }
+  background: #41e30c; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #bec1f2; }
+  background: #5f76fd; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8168b0; }
+  background: #772d55; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #c2ac7b; }
+  background: #835526; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #2ecce7; }
+  background: #a9301c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16839,13 +16839,19 @@ input:not(:checked) + .slider-switch > .switch-non {
 .result-title {
   font-size: 36px !important; }
 
-.btn-links-wrapper .cancel-btn {
-  color: #4C4C4C;
-  text-decoration: none; }
-  .btn-links-wrapper .cancel-btn span {
+.btn-links-wrapper {
+  display: flex;
+  align-items: center; }
+  .btn-links-wrapper .cancel-btn {
+    color: #4C4C4C;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    padding: 0px; }
+  .btn-links-wrapper span {
     color: #4c4c4c;
     font-size: 20px;
-    padding: 18px 0px 14px; }
+    padding: 0px 14px; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
