--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #740eb4; }
+  background: #0d834c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #496bdf; }
+  background: #a2d15d; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #65b93c; }
+  background: #5b800c; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #7095a5; }
+  background: #198f20; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7e6673; }
+  background: #f0df37; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #c117b3; }
+  background: #58318f; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #1c4ff0; }
+  background: #9505c5; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #1e4370; }
+  background: #e347d7; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #6e6201; }
+  background: #f80cb5; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #9c694c; }
+  background: #dbbd4e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #ad5de9; }
+  background: #514c41; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #996c66; }
+  background: #0b3a21; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #de3690; }
+  background: #ff3161; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #67c98a; }
+  background: #621b34; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #940d6a; }
+  background: #f990e6; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #0735c5; }
+  background: #a9af71; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #28e40b; }
+  background: #8743a2; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #df3f65; }
+  background: #454067; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #6d15a2; }
+  background: #7a85a9; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #2f78f5; }
+  background: #f7a60d; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #0c8cec; }
+  background: #25d36c; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #1a20ea; }
+  background: #db72e1; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #a5dfc1; }
+  background: #c326c7; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #6d17ec; }
+  background: #09fc10; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #45543e; }
+  background: #25b4ed; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #aece0c; }
+  background: #058e31; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #4c767f; }
+  background: #64ee86; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #a0afc3; }
+  background: #6906d7; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #13699a; }
+  background: #6c498d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #51c216; }
+  background: #73726f; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #772622; }
+  background: #aa1e54; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #1303c3; }
+  background: #7e2e47; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #96b8af; }
+  background: #95a085; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #c85a25; }
+  background: #e021c9; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #c32f17; }
+  background: #7eba3b; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #844984; }
+  background: #ab5bd0; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #9e0964; }
+  background: #9327c8; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #95694b; }
+  background: #d98046; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #52eb45; }
+  background: #fa34d1; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #81f6c6; }
+  background: #4a1941; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #61de73; }
+  background: #52d3c6; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #9c8fe8; }
+  background: #54b488; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #6472b9; }
+  background: #8815be; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #08a381; }
+  background: #816908; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #bdb8b6; }
+  background: #1c5f0c; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b0b29f; }
+  background: #6bf54b; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #9b3eb7; }
+  background: #bc12ae; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #c2c7c3; }
+  background: #daf7c4; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #e18cd3; }
+  background: #502fc5; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #0e25d6; }
+  background: #21601b; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #4ba87b; }
+  background: #df16ce; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #58f02d; }
+  background: #3a2a7d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #12a4fd; }
+  background: #b98753; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #31ca06; }
+  background: #4b02df; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #8e9035; }
+  background: #b94b2a; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #82d6e8; }
+  background: #8ffdb9; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #946341; }
+  background: #94732e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #c68d23; }
+  background: #0e0a17; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #dd0f57; }
+  background: #5e9d9d; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #b339f3; }
+  background: #79c3d3; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #614a2f; }
+  background: #b18292; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c7f460; }
+  background: #7295d8; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #899577; }
+  background: #edc4b5; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c67b4b; }
+  background: #0d4147; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #898928; }
+  background: #8f9961; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #c2dae1; }
+  background: #0a50ef; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #92d51a; }
+  background: #91c26d; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #f3b924; }
+  background: #f4fe81; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #0ce04c; }
+  background: #eb6f05; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #07b9d2; }
+  background: #3372ab; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #081e9f; }
+  background: #fe411c; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #417cd1; }
+  background: #468121; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #41124d; }
+  background: #f3fca9; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #b01e09; }
+  background: #594fcd; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #89908a; }
+  background: #8483af; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #fa0564; }
+  background: #a90a58; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #a33837; }
+  background: #fa6879; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #552629; }
+  background: #d8683f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #f433b3; }
+  background: #89c7f7; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #b7ba52; }
+  background: #049cbe; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #57f02e; }
+  background: #ae15e9; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #863613; }
+  background: #0a74d5; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #bf7789; }
+  background: #0f8f58; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #916c26; }
+  background: #6d1786; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #169ca7; }
+  background: #b8c89e; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #ba99b8; }
+  background: #5a1c0b; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #0f93e2; }
+  background: #1c492b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c10bb9; }
+  background: #293eba; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #be349d; }
+  background: #072ced; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #e64ec2; }
+  background: #cb878f; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #79a873; }
+  background: #8b2d33; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #29c325; }
+  background: #0ac153; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c19ff8; }
+  background: #913aff; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #24d323; }
+  background: #d5d4f6; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f3d1b2; }
+  background: #31765a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #41e30c; }
+  background: #323279; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #5f76fd; }
+  background: #842e2b; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #772d55; }
+  background: #8d431a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #835526; }
+  background: #47a87c; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a9301c; }
+  background: #75c2ed; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
