--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #0d834c; }
+  background: #8519c9; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #a2d15d; }
+  background: #e6955f; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #5b800c; }
+  background: #9593d1; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #198f20; }
+  background: #193053; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #f0df37; }
+  background: #7a1104; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #58318f; }
+  background: #ac81da; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #9505c5; }
+  background: #93164b; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #e347d7; }
+  background: #c47947; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #f80cb5; }
+  background: #e37e8b; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #dbbd4e; }
+  background: #3f0be6; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #514c41; }
+  background: #d7b184; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #0b3a21; }
+  background: #4a97a3; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #ff3161; }
+  background: #56a849; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #621b34; }
+  background: #0d7a6f; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #f990e6; }
+  background: #b36267; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #a9af71; }
+  background: #0e5b12; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #8743a2; }
+  background: #db7da5; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #454067; }
+  background: #c1edf9; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #7a85a9; }
+  background: #b91d76; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f7a60d; }
+  background: #f72042; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #25d36c; }
+  background: #dda171; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #db72e1; }
+  background: #8b44b2; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #c326c7; }
+  background: #e1a264; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #09fc10; }
+  background: #4631a7; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #25b4ed; }
+  background: #c755d8; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #058e31; }
+  background: #24e5ac; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #64ee86; }
+  background: #781742; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #6906d7; }
+  background: #c906dc; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #6c498d; }
+  background: #2cb2cd; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #73726f; }
+  background: #d83ea1; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #aa1e54; }
+  background: #e442b1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #7e2e47; }
+  background: #2eb569; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #95a085; }
+  background: #e3de77; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #e021c9; }
+  background: #fb2eda; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #7eba3b; }
+  background: #44730c; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ab5bd0; }
+  background: #257229; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #9327c8; }
+  background: #a1aee4; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #d98046; }
+  background: #f11d26; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #fa34d1; }
+  background: #2f85ad; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #4a1941; }
+  background: #477792; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #52d3c6; }
+  background: #f42209; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #54b488; }
+  background: #fab8dc; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #8815be; }
+  background: #4210f4; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #816908; }
+  background: #5071bc; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #1c5f0c; }
+  background: #45a82d; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #6bf54b; }
+  background: #dfde04; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #bc12ae; }
+  background: #c115f3; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #daf7c4; }
+  background: #740585; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #502fc5; }
+  background: #71918d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #21601b; }
+  background: #4b2b30; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #df16ce; }
+  background: #a23454; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #3a2a7d; }
+  background: #4752c6; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #b98753; }
+  background: #4d72d3; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #4b02df; }
+  background: #545f99; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #b94b2a; }
+  background: #934580; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #8ffdb9; }
+  background: #eff844; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #94732e; }
+  background: #3f0cca; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #0e0a17; }
+  background: #51b7b0; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #5e9d9d; }
+  background: #a7c38f; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #79c3d3; }
+  background: #593b42; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #b18292; }
+  background: #4cb414; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #7295d8; }
+  background: #92f6ac; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #edc4b5; }
+  background: #fa36df; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #0d4147; }
+  background: #7e6666; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #8f9961; }
+  background: #ab4d88; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #0a50ef; }
+  background: #aa7610; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #91c26d; }
+  background: #a01001; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #f4fe81; }
+  background: #8070c9; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #eb6f05; }
+  background: #b215b5; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #3372ab; }
+  background: #196f20; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #fe411c; }
+  background: #0cc14f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #468121; }
+  background: #9988f3; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #f3fca9; }
+  background: #86fa91; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #594fcd; }
+  background: #0f9476; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #8483af; }
+  background: #c4a0d8; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #a90a58; }
+  background: #238482; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #fa6879; }
+  background: #9941a5; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d8683f; }
+  background: #24f1db; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #89c7f7; }
+  background: #bf2e24; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #049cbe; }
+  background: #6a20f7; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #ae15e9; }
+  background: #235461; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #0a74d5; }
+  background: #571b07; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #0f8f58; }
+  background: #0c6add; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #6d1786; }
+  background: #1a4719; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b8c89e; }
+  background: #5dc05b; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #5a1c0b; }
+  background: #5840b2; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #1c492b; }
+  background: #a6909d; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #293eba; }
+  background: #49f481; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #072ced; }
+  background: #7e1d8e; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #cb878f; }
+  background: #97d508; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #8b2d33; }
+  background: #478e64; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #0ac153; }
+  background: #9645f1; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #913aff; }
+  background: #2761a5; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #d5d4f6; }
+  background: #9daf0a; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #31765a; }
+  background: #828c63; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #323279; }
+  background: #df651a; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #842e2b; }
+  background: #5770c2; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8d431a; }
+  background: #99c3c6; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #47a87c; }
+  background: #125304; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #75c2ed; }
+  background: #89d4b2; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
